# level4-nlp-finalproject-hackathon-nlp-04-lv3

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_backend_docker.yaml  build_backend_image.yaml  build_batch-airflow_image.yaml  build_frontend_image.yaml  build_realtime-fastapi_image.yaml
ai/batch_airflow/: .env.example  Dockerfile  airflow_init.sh  prompt.json  pyproject.toml  run_scheduler_webserver.sh
ai/batch_airflow/dags/: diary_feedback.py  diray_feedack_async.py
ai/batch_airflow/tuning/: feedback_evaluator.py  feedback_generator.py  hcx_tuning.py  llm_api.py  prompt.py  viewer.py
ai/realtime_fastapi/: Dockerfile  app.py  main.py  pyproject.toml
ai/realtime_fastapi/api/routes/: text_chat.py  text_explain.py  vocab_chat.py
ai/realtime_fastapi/schemas/: text_chat.py  text_explain.py  vocab_chat.py
ai/realtime_fastapi/services/text_chat/: text_chat_prompt.json  text_chatbot.py
ai/realtime_fastapi/services/text_explain/: text_explain.py  text_explain_evaluator.py  text_explain_prompt.json
ai/realtime_fastapi/services/text_explain/data/: text_focused.jsonl
ai/realtime_fastapi/services/text_quiz/: generate_quiz.py  hcx_tuning.py  llm_api.py  main.py  prompt.json  quiz_generator.py  text_quiz_evaluator.py
ai/realtime_fastapi/services/text_quiz/data/: db_quiz_dataset.jsonl  text.csv
ai/realtime_fastapi/services/vocab_chat/: vocab_chat_prompt.json  vocab_chatbot.py
ai/realtime_fastapi/services/vocab_chatbot_prompt/: antonym.py  communication.py  prevent.py  synonym.py
ai/realtime_fastapi/services/vocab_explain/: vocab_explain_evaluator.py  vocab_explain_generator.py  vocab_explain_prompt.json  vocab_explain_tuning.py
ai/realtime_fastapi/services/vocab_explain/data/: 2wk3wvmg_arabugi_vocab_explain.jsonl  Gemini_arabugi_vocab_explain.jsonl  HCX_arabugi_vocab_explain.jsonl  arabugi_vocab.csv  arabugi_vocab_explain_evaluation.jsonl  instruction_dataset.jsonl  vocab.csv  vocab_explain.csv
ai/realtime_fastapi/services/vocab_quiz/: convert_dataset.py  dataset_generator.py  vocab_quiz_evaluator.py  vocab_quiz_generator_default.py  vocab_quiz_generator_tuned.py  vocab_quiz_tuning.py
ai/realtime_fastapi/services/vocab_quiz/data/: dict_vocab_quiz_output.jsonl  eval_result_default.jsonl  eval_result_tuned_model.jsonl  generated_vocab_quiz_default.jsonl  generated_vocab_quiz_instruction_tuning.jsonl
ai/realtime_fastapi/tests/: test_text_explain.py
backend/: .env.example  Dockerfile  app.py  pyproject.toml
backend/api/routes/: alarm.py  auth.py  diary.py  level.py  main.py  study_record.py  text.py  text_quiz.py  user.py  vocab.py  vocab_quiz.py
backend/core/: config.py  database.py  security.py
backend/data/: initialize.py  text.jsonl  text_quiz.jsonl  vocab.jsonl  vocab_quiz.jsonl
backend/models/: alarm.py  diary.py  score.py  study_record.py  text.py  text_bookmark.py  text_conversation.py  text_quiz.py  user.py  vocab.py  vocab_conversation.py  vocab_quiz.py
backend/schemas/: auth.py  diary.py  level.py  study_record.py  text.py  text_quiz.py  user.py  vocab.py  vocab_quiz.py
backend/services/: alarm.py  level.py
backend/tests/: conftest.py  test_auth.py  test_diary.py  test_level.py  test_main.py  test_text.py  test_text_quiz.py  test_vocab.py  test_vocab_quiz.py
frontend/: .env.development  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  index.html  package-lock.json  package.json  settings.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  guestmainpage.tsx  vocabpage.tsx
frontend/src/animations/: presets.ts
utils/: dictionary.py  preprocess_text.py
utils/job_queue/: enqueue.sh  job_manager_validation.py  tmux_job_manager.sh  worker.sh
(+232 files in other folders)
